--- a/CSI6111.Shared/CSI6111.Shared.csproj
+++ b/CSI6111.Shared/CSI6111.Shared.csproj
@@ -42,7 +42,7 @@
   <ItemGroup>
     <Compile Include="ILogin.cs" />
     <Compile Include="ILogoff.cs" />
-    <Compile Include="ICourse.cs" />
+    <Compile Include="IEvaluate.cs" />
     <Compile Include="IRuOK.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
